First Massive Commit

--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,21 @@
 .App {
+  background-image: url('../public/bgnasdaq.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  /*animation: App-logo-spin infinite 20s linear;*/
+   height: 200px;
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -28,11 +24,52 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+.App input, .App textarea, .App select {
+    display: inline;
+    padding: 10px;
+    font-size: 1.3rem;
+    line-height: 1.2;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.stock {
+  max-width: 700px;
+  margin-bottom: 5px;
+  background-color:#000;
+}
+
+.giallo {
+  color: yellow;
+}
+
+.bianco {
+  color: white;
+}
+.red {
+  color: #ff0000;
+  font-weight: bold;
+}
+.col p {
+  color: #CCC;
+}
+
+a {
+  color: #61dafb;
+  text-decoration: none;
+}
+@keyframes onLoading {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
+}
+.loadico {
+  animation: onLoading 2s linear infinite;
 }
