--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
+.start-app {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;  
+}
+
+.start-app h1 {
+  font-size: 500%;
+}
+
+.start-btn {
+  margin-top: 4%;
+  width: 20%;
+  font-size: large;
+  font-weight: bold;
+}
+
 .App {
   background-image: url('../public/bgnasdaq.png');
   background-position: center;
