--- a/src/Stock.css
+++ b/src/Stock.css
@@ -9,6 +9,7 @@
 .stock {
   margin-top: 10px;
   margin-bottom: 5px;
+  box-shadow: 5px 5px 5px 0.5px rgba(60, 60, 60, 0.7);  
   }
   .nomestock {
     padding: 0.1rem;
@@ -24,12 +25,13 @@
   margin: 0 5px;
   font-size: 14px;
   padding: 10px;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(0, 0, 0);  
   }
   .closebtn {
-    position: relative;
+    display: inline-block;
+    position: static;
     top: -6px;
-    left: 250px;
+    left: 235px;
     color: white;
     z-index: 999;
     cursor: pointer;
@@ -107,4 +109,14 @@ input[type="checkbox"], input[type="radio"] {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
+}
+
+.grafico {
+  width: 90%;
+}
+
+@media only screen and (max-width: 350px) {
+  .stock {
+    font-size: 5%;
+  }
 }
